# LokiPool

./: Cargo.toml  README.md  config.toml  proxies.txt
.github/workflows/: release.yml
crates/lokipool-api/: Cargo.toml
crates/lokipool-api/src/: lib.rs  main.rs
crates/lokipool-cli/: Cargo.toml
crates/lokipool-cli/src/: lib.rs  main.rs
crates/lokipool-core/: Cargo.toml
crates/lokipool-core/src/: config.rs  error.rs  lib.rs  pool.rs  proxy.rs  proxy_pool.rs  tester.rs
src/: config.rs  error.rs  lib.rs  main.rs  pool.rs  proxy.rs  proxy_pool.rs  socks_server.rs  tester.rs  ui.rs
tools/: README.md  test_proxy.sh
