[package]
name = "lokipool"
version = "0.1.0"
edition = "2021"
authors = ["LokiPool Developer"]
description = "A SOCKS5 proxy pool manager with latency testing"

[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "link-arg=-static",
    "-C", "target-feature=+crt-static"
]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["socks"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.0"
indicatif = "0.17"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
deadpool = { version = "0.9", features = ["managed"] }
tokio-util = "0.7"
async-trait = "0.1"
rayon = "1.8"
num_cpus = "1.16"
